--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1 font-family: "Comic Sans MS", "Comic Sans", cursive>Noicescopers</h1><br>
-<a font-family: "Comic Sans MS", "Comic Sans", cursive href="https://discordapp.com/invite/WC6abpY">Discord invite</a>
+<h1>Noicescopers</h1><br>
+<a href="https://discordapp.com/invite/WC6abpY">Discord invite</a>
+<a href="https://github.com/joeb456/nightapis">Nightbot "apis"</a> (dont forget you can commit whenever you want ^u^)
