--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+joo:<br>
 <h1>Noicescopers</h1><br>
 <a href="https://discordapp.com/invite/WC6abpY">Discord invite</a> <br>
-<a href="https://github.com/joeb456/nightapis">Nightbot "apis"</a> (dont forget you can commit whenever you want ^u^)
+<a href="https://github.com/joeb456/nightapis">Nightbot "apis" repo</a> (dont forget you can commit whenever you want ^u^)<br>
+<a href="https://github.com/noicescopers/site">This website's repo</a> <br>
+<a href="https://beta.nightbot.tv/t/joeburnett456/commands">Nightbot's commands</a> <br>
+<a href="commands.md">All the commands (probably not up to date tbh)</a> <br>
+<a href="rules.md">The rules</a> <br>
+<a href="http://twitch.center/customapi/quote/list?token=e972597b">The quotes (up to date)</a> <br>
+<a href="invading.md">Where we are on not discord</a> <br>
+<br>
+uupo: krekt<br>
+joo: ;-;
