Update and rename commands.md to commands.html

--- a/commands.html
+++ b/commands.html
@@ -1,5 +1,5 @@
-__**Nightbot**__<br />
-*Queries are shown with $(1)-$(9)*<br /><br />
+<u><b>Nightbot</b></u><br />
+<i>*Queries are shown with $(1)-$(9)*</i><br /><br />
 
 __*stop making commands already*__<br />
 **!meme** -- idk, try it... G<br />
