--- a/commands.html
+++ b/commands.html
@@ -1,7 +1,8 @@
+<a href="index.html">Back</a> <br><br>
 <u><b>Nightbot</b></u><br />
 <i>*Queries are shown with $(1)-$(9)*</i><br /><br />
 
-__*stop making commands already*__<br />
+<u><i>stop making commands already</u></i><br />
 **!meme** -- idk, try it... G<br />
 **!twitch** -- Shows everyone's twitch! G<br />
 **!awpkill $(1)** -- pew pew<br />
