--- a/commands.html
+++ b/commands.html
@@ -1,41 +1,41 @@
 <a href="index.html">Back</a> <br><br>
 <u><b>Nightbot</b></u><br />
-<i>*Queries are shown with $(1)-$(9)*</i><br /><br />
+<i>Queries are shown with $(1)-$(9)</i><br /><br />
 
 <u><i>stop making commands already</u></i><br />
-**!meme** -- idk, try it... G<br />
-**!twitch** -- Shows everyone's twitch! G<br />
-**!awpkill $(1)** -- pew pew<br />
-**!evolve $(1)** -- whut porkymen do<br />
-**!evolve2 $(1)** -- again<br />
-**!evolve3 $(1)** -- ok u can stop<br />
-**!evolve10 $(1)** -- this isnt fun anymore<br />
-**!evolve100 $(1)** -- stahp<br />
-**!gdscore $(x%) $(level)** -- show off ur skillz m9<br />
-**!joespecs** -- its a fucking mac ffs<br />
-**!givecookie** -- kk is this a threat i dont get it i like cookies<br />
-**!keytosuccess** -- dee jayy ka leeed<br />
-**!kill** $(1)<br />
-**!kiss** $(1)<br />
-**!kms** $(1)<br />
-**!kys** $(1)<br />
-**!slap** $(1)<br />
-**!smgkill** $(1)<br />
-**!mine** -- Oh look, a dead meme!<br />
-**!rekted** -- OMG REKT<br />
-**!rip $(1)** -- bweeeb bweeeb bweeeb bweeeeeeb BUT WHAT IF x WAS NOT KILL?<br />
-**sayd $(query)** -- query<br />
-**!wikihow $(1)** -- http://www.wikihow•com/Lose-Your-Virginity-Without-Pain-(Girls)<br />
-**textfaces -- (lenny)**<br />
+<b>!meme</b> -- idk, try it...<br />
+<b>!twitch</b> -- Shows everyone's twitch!<br />
+<b>!awpkill $(1)</b> -- pew pew<br />
+<b>!evolve $(1)</b> -- whut porkymen do<br />
+<b>!evolve2 $(1)</b> -- again<br />
+<b>!evolve3 $(1)</b> -- ok u can stop<br />
+<b>!evolve10 $(1)</b> -- this isnt fun anymore<br />
+<b>!evolve100 $(1)</b> -- stahp<br />
+<b>!gdscore $(x%) $(level)</b> -- show off ur skillz m9<br />
+<b>!joespecs</b> -- its a fucking mac ffs<br />
+<b>!givecookie</b> -- kk is this a threat i dont get it i like cookies<br />
+<b>!keytosuccess*</b> -- dee jayy ka leeed<br />
+<b>!kill</b> $(1)<br />
+<b>!kiss</b> $(1)<br />
+<b>!kms</b> $(1)<br />
+<b>!kys</b> $(1)<br />
+<b>!slap</b> $(1)<br />
+<b>!smgkill</b> $(1)<br />
+<b>!mine</b> -- Oh look, a dead meme!<br />
+<b>!rekted</b> -- OMG REKT<br />
+<b>!rip $(1)</b> -- bweeeb bweeeb bweeeb bweeeeeeb BUT WHAT IF x WAS NOT KILL?<br />
+<b>sayd $(query)</b> -- query<br />
+<b>!wikihow $(1)</b> -- http://www.wikihow.com/Lose-Your-Virginity-Without-Pain-(Girls)<br />
+<b>textfaces</b> -- (lenny)<br />
 <br />
-__*timezones*__<br />
-**!autismherb<br />
+<u><i>timezones</u></i><br />
+<b>!autismherb<br />
 !dragonfire<br />
 !furioustiger<br />
 !joo<br />
 !mrdolph<br />
 !urocket<br />
-!uupo**<br />
+!uupo</b><br />
 <br />
 __*Games*__<br />
 **!8ball OR :8ball:** -- 8 ball<br />
